[package]
name = "comfy-table"
description = "An easy to use library for building beautiful tables with automatic content wrapping"
version = "6.1.2"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/comfy-table"
repository = "https://github.com/nukesor/comfy-table"
documentation = "https://docs.rs/comfy-table/"
license = "MIT"
keywords = ["terminal", "table", "unicode"]
readme = "README.md"
rust-version = "1.62"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "build_tables"
harness = false

[[bench]]
name = "build_large_table"
harness = false

[[example]]
name = "no_tty"
path = "examples/readme_table_no_tty.rs"

[[example]]
name = "readme_table"
path = "examples/readme_table.rs"

[[example]]
name = "inner_style"
path = "examples/inner_style.rs"
required-features = ["ansi"]

[features]
default = ["tty"]
tty = ["crossterm"]
ansi = ["console"]
# This flag is for library debugging only!
debug = []
# This feature is used to expose internal functionality for integration testing.
integration_test = []

[dependencies]
crossterm = { version = "0.25", optional = true }
strum = "0.24"
strum_macros = "0.24"
unicode-width = "0.1"
console = { version = "0.15.1", optional = true }

[dev-dependencies]
criterion = "0.4"
doc-comment = "0.3"
pretty_assertions = "1"
proptest = "1"
rand = "0.8"
rstest = "0.15"
