[package]
name = "comfy-table"
description = "An easy to use library for building beautiful tables with automatic content wrapping"
version = "7.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/comfy-table"
repository = "https://github.com/nukesor/comfy-table"
documentation = "https://docs.rs/comfy-table/"
license = "MIT"
keywords = ["terminal", "table", "unicode"]
readme = "README.md"
rust-version = "1.64"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "build_tables"
harness = false

[[bench]]
name = "build_large_table"
harness = false

[[example]]
name = "no_tty"
path = "examples/readme_table_no_tty.rs"

[[example]]
name = "readme_table"
path = "examples/readme_table.rs"

[[example]]
name = "inner_style"
path = "examples/inner_style.rs"
required-features = ["custom_styling"]

[features]
default = ["tty"]
# This flag enables support for terminals:
# - Automatic detection whether we're in a terminal environment
#   Only used when no explicit `Table::set_width` is provided.
# - Support for ANSI Escape Code styling for terminals.
tty = ["crossterm"]
# This flag enables support for custom styling of text inside of cells:
# - Text formatting still works, even if you roll your own ANSI escape sequences.
# - Rainbow text
# - Makes comfy-table 30-50% slower
custom_styling = ["console"]
# With this flag, comfy_table re-exposes crossterm's "Attribute" and "Color" enum.
# By default, a mirrored type is exposed, which internally maps to the crossterm type.
#
# This feature is very convenient if you use both comfy_table and crossterm in your code
# and want to use crossterm's types for everything interchangeably.
#
# **BUT** if you enable this feature, you opt-in for breaking changes on minor/patch versions.
# Meaning, you have to update crossterm whenever you update comfy_table and vice versa, since
# they now use the same types.
reexport_crossterm = ["tty"]
# This flag is for comfy-table development debugging!
# You usually don't need this as a user of the library.
debug = []
# This feature is used to for integration testing of comfy_table.
# It exposes normally unexposed internal functionality for easier testing.
integration_test = []

[dependencies]
strum = "0.25"
strum_macros = "0.26"
unicode-width = "0.1"
console = { version = "0.15", optional = true }

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
proptest = "1"
rand = "0.8"
rstest = "0.18"

# We don't need any of the default features for crossterm.
# However, the windows build needs the windows feature enabled.
[target.'cfg(not(windows))'.dependencies]
crossterm = { version = "0.27", optional=true, default-features = false }
[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.27", optional=true, default-features = false, features=["windows"] }
