[package]
name = "comfy-table"
description = "An easy to use library for building beautiful tables with automatic content wrapping"
version = "7.1.3"
authors = ["Arne Beer <contact@arne.beer>"]
homepage = "https://github.com/nukesor/comfy-table"
repository = "https://github.com/nukesor/comfy-table"
documentation = "https://docs.rs/comfy-table/"
license = "MIT"
keywords = ["table", "terminal", "unicode"]
readme = "README.md"
rust-version = "1.64"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
harness = false
name = "build_tables"

[[bench]]
harness = false
name = "build_large_table"

[[example]]
name = "no_tty"
path = "examples/readme_table_no_tty.rs"

[[example]]
name = "readme_table"
path = "examples/readme_table.rs"

[[example]]
name = "inner_style"
path = "examples/inner_style.rs"
required-features = ["custom_styling"]

[features]
# For more info about these flags, please check the README.
# Everything's explained over there.
custom_styling = ["ansi-str", "console", "tty"]
default = ["tty"]
reexport_crossterm = ["tty"]
tty = ["crossterm"]
# ---- DEVELOPMENT FLAGS ----
# This flag is for comfy-table development debugging!
# You usually don't need this as a user of the library.
debug = []
# This feature is used to for integration testing of comfy_table.
# It exposes normally unexposed internal functionality for easier testing.
# DON'T USE. You opt in for breaking changes, as the internal API might change on minor/patch versions.
integration_test = []

[dependencies]
ansi-str = { version = "0.8", optional = true }
console = { version = "0.15", optional = true }
strum = "0.26"
strum_macros = "0.26"
unicode-width = "0.2"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
proptest = "1"
rand = "0.8"
rstest = "0.24"

# We don't need any of the default features for crossterm.
# However, the windows build needs the windows feature enabled.
[target.'cfg(not(windows))'.dependencies]
crossterm = { version = "0.28", optional = true, default-features = false }
[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.28", optional = true, default-features = false, features = [
    "windows",
] }
